<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/textViewTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task_name"
        app:layout_constraintTop_toBottomOf="@id/textViewTaskName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/textViewTaskTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_time"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextTaskTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task_time"
        app:layout_constraintTop_toBottomOf="@id/textViewTaskTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/textViewTaskDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_date"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextTaskDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task_date"
        app:layout_constraintTop_toBottomOf="@id/textViewTaskDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/buttonSaveTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskDate" />
</androidx.constraintlayout.widget.ConstraintLayout>
